<resources>
    <string name="app_name">NextEditor</string>
    <string name="untitled">untitled</string>
    <string name="settings">设置</string>
    <string name="file">文件</string>
    <string name="new_file">新建</string>
    <string name="open_file">打开</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="undo">撤消</string>
    <string name="redo">重做</string>
    <string name="save_as">另存为</string>
    <string name="close">关闭</string>
    <string name="read_only">只读</string>
    <string name="theme">主题</string>
    <string name="current">当前</string>
    <string name="select_all">全选</string>
    <string name="copy">复制</string>
    <string name="paste">粘贴</string>

    <string name="lineWrapping">自动换行</string>
    <string name="lineNumbers">显示行号</string>
    <string name="matchBrackets">括号匹配</string>
    <string name="smartIndent">智能缩进</string>
    <string name="highlight_and_theme">高亮和主题</string>
    <string name="other">其他</string>
    <string name="extension">扩展</string>
    <string name="check_updates">检查更新</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于</string>
</resources>
