<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/file"
        android:title="@string/file"
        android:icon="@drawable/file"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/new_file"
                android:orderInCategory="100"
                android:title="@string/new_file">
            </item>
            <item
                android:id="@+id/open_file"
                android:orderInCategory="100"
                android:title="@string/open_file"
                >
            </item>
            <item
                android:id="@+id/save"
                android:orderInCategory="100"
                android:title="@string/save">
            </item>
            <item
                android:id="@+id/save_as"
                android:orderInCategory="100"
                android:title="@string/save_as">
            </item>
            <item
                android:id="@+id/close"
                android:orderInCategory="100"
                android:title="@string/close">
            </item>
        </menu>
    </item>

    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:icon="@drawable/edit"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/undo"
                android:orderInCategory="100"
                android:title="@string/undo">
            </item>
            <item
                android:id="@+id/redo"
                android:orderInCategory="100"
                android:title="@string/redo">
            </item>
            <item
                android:id="@+id/read_only"
                android:orderInCategory="100"
                android:title="@string/read_only"
                android:checkable="true">
            </item>
        </menu>
    </item>

</menu>